<resources>
    <string name="app_name">Medical Cover SP</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="title_settings">Settings</string>
    <string name="title_appointment">Appointments</string>
    <string name="title_appointment_details">Appointment Details</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="patient_details">Patient details</string>
    <string name="patient_name">Patient Name:</string>
    <string name="patient_age">Patient Age:</string>
    <string name="patient_gender">Patient Gender:</string>
    <string name="show_medical_history">Show Medical History</string>
    <string name="add_prescription">Add Prescription</string>
    <string name="new_prescription">Add New Prescription</string>
    <string name="policy_no">Policy No:</string>
    <string name="membership_no">Membership No:</string>
    <string name="company_name">Company Name:</string>
    <string name="diagnosis">Diagnosis:</string>
    <string name="enter_diagnosis">Enter Diagnosis</string>
    <string name="medications">Medications:</string>
    <string name="lab_radiology"><![CDATA[Lab & Radiology]]></string>
    <string name="new_medication">New Medication</string>
    <string name="enter_medication_name">Enter medication name</string>
    <string name="done">Done</string>
    <string name="enter_medication_dose">Enter medication dose</string>
    <string name="enter_medication_duration">Enter medication duration</string>
    <string name="new_medical_test">New Medical Test</string>
    <string name="enter_test_name">Enter Test or Radiology Name</string>
    <string name="all">All</string>
    <string name="medication_requests">Medication Requests:</string>
    <string name="lab_requests">Lab Requests:</string>
    <string name="radiology_requests">Radiology Requests:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_details">Request details</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="not_added_yet">Not added yet</string>
    <string name="finish">Finish</string>
    <string name="finished">Finished</string>
    <string name="lab_tests">Lab Tests</string>
    <string name="radiology">Radiology</string>
    <string name="allergy">Allergy</string>
    <string name="surgery">Surgery</string>
    <string name="vaccine">Vaccine</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="blood_glucose">Blood Glucose</string>
    <string name="family_history">Family History</string>
    <string name="add_allergy">Add Allergy</string>
    <string name="add_vaccine">Add Vaccine</string>
    <string name="add">Add</string>
    <string name="result">Result</string>
    <string name="blood_type">Blood type</string>
    <string name="for_all">All</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pulse">Pulse</string>
    <string name="type">Type:</string>
    <string name="fasting">Fasting</string>
    <string name="postprandial">Postprandial</string>
    <string name="random">Random</string>
    <string name="family_member">Family member</string>
    <string name="description">description</string>
    <string name="patient_has_allergy_from">Patient has allergy from</string>
    <string name="pregnant">Pregnant:</string>
    <string name="chronic_diseases">Chronic Diseases:</string>
    <string name="place2">Place:</string>
    <string name="doctor2">Doctor:</string>
    <string name="result2">Result:</string>
    <string name="title2">Title:</string>
    <string name="date">Date:</string>
    <string name="note2">Note:</string>
    <string name="test">Test</string>
    <string name="normal">Normal</string>
    <string name="title">Title</string>
    <string name="doctor">Doctor</string>
    <string name="save">Save</string>
    <string name="place">Place</string>
    <string name="add_new_lab_test">Add new lab test</string>
    <string name="add_new_radiology">Add new radiology</string>
    <string name="note">Note</string>
    <string name="set_results">Set Results</string>
    <string name="new_requests">New requests</string>
    <string name="old_requests">Old Requests</string>
    <string name="my_profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="companies">Companies</string>
    <string name="sp">Service providers</string>
    <string name="policy_no2">Policy No.</string>
    <string name="company_name2">Company name</string>
    <string name="membership_number">Membership Number</string>
    <string name="create_service_provider_account">Create Service Provider account</string>
    <string name="register">Register</string>
    <string name="doctors">Doctors</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="services">Services</string>
    <string name="create">Create</string>
    <string name="specialties">Specialties</string>
    <string name="name">Name</string>
    <string name="none">None</string>
    <string name="create_pharmacy">Create Pharmacy</string>
    <string name="create_center">Create center</string>
</resources>